ENT-1855: Port CertificateSerialDTO to openapi spec
- Add custom deserializer for OffsetDateTime that
  supports ISO 8601 dates with optional offset, millis, or time.
- Add custom serializer for OffsetDateTime that cuts off millis and
  converts to UTC using the offset.
