# server/src/main/java/org/candlepin/dto/api/v1/CertificateSerialTranslator.java
@@ -15,16 +15,19 @@
 package org.candlepin.dto.api.v1;
 
 import org.candlepin.dto.ModelTranslator;
-import org.candlepin.dto.TimestampedEntityTranslator;
+import org.candlepin.dto.ObjectTranslator;
 import org.candlepin.model.CertificateSerial;
+
+import java.time.ZoneOffset;
+import java.util.Date;
 
 
 /**
  * The CertificateSerialTranslator provides translation from CertificateSerial model objects to
  * CertificateSerialDTOs
  */
-public class CertificateSerialTranslator extends
-    TimestampedEntityTranslator<CertificateSerial, CertificateSerialDTO> {
+public class CertificateSerialTranslator implements ObjectTranslator<CertificateSerial,
+    CertificateSerialDTO> {
 
     /**
      * {@inheritDoc}
@@ -56,14 +59,38 @@ public class CertificateSerialTranslator extends
     @Override
     public CertificateSerialDTO populate(ModelTranslator translator, CertificateSerial source,
         CertificateSerialDTO dest) {
+        if (source == null) {
+            throw new IllegalArgumentException("source is null");
+        }
 
-        dest = super.populate(translator, source, dest);
+        if (dest == null) {
+            throw new IllegalArgumentException("dest is null");
+        }
+
+        //ToDo: Add date formats
+        /*Date created = source.getCreated();
+        dest.setCreated(created != null ? created.toInstant().atOffset(ZoneOffset.UTC) : null);
+
+        Date updated = source.getUpdated();
+        dest.setUpdated(updated != null ? updated.toInstant().atOffset(ZoneOffset.UTC) : null);*/
+
+        //ToDo: REmove this dependancy of string
 
         dest.setId(source.getId());
-        dest.setSerial(source.getSerial());
-        dest.setExpiration(source.getExpiration());
+        /*dest.setSerial(source.getSerial());
+        dest.setExpiration(source.getExpiration());*/
         dest.setCollected(source.isCollected());
         dest.setRevoked(source.isRevoked());
+
+
+        /*dest.id(source.getId() == null ? null : source.getId().toString());*/
+        dest.serial(source.getSerial() == null ? null : source.getSerial().toString());
+        Date expirationDate = source.getExpiration();
+        dest.expiration(expirationDate != null ? expirationDate.toInstant().atOffset(ZoneOffset.UTC) : null);
+        dest.collected(source.isCollected());
+        dest.revoked(source.isRevoked());
+
+
 
         return dest;
     }
